2004-09-29 16:25 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c added argument -c to allow a cylindrical
	variation in spacing. added -m to turn on gridmovement for
	projection.

2004-09-29 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwap) Added gridRemoveTwoFaceCell to cell
	loop. Note gridSwap is only for the sequential driver.

2004-09-29 15:29 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetMapWithSpacingVectors) added function
	to compute the spacing metric at a node with three principle axis
	and three spacing values. (Note the principle axis must be
	orthogonal and length one)

2004-09-22 20:31 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c added argument -z to allow a linear variation in
	Z spacing from the middle of the box to the top and bottom.
	Increased the kick out tolerence to a 1 percent change in number
	of nodes.

2004-09-22 20:50 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwap) Exposed the improvementLimit as a
	calling argument. Note it will be reset to default values if it is
	less than 0.0. Modified all the drivers that call gridSwap

2004-09-22 20:31 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c extensively modifed to: expose a constant ratio,
	expose a constant spacing, add a final improvement sweep.

2004-09-22 20:12 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmooth,gridSmoothFaceMR) Exposed the
	optimizationLimit and laplacianLimit parameters as calling
	arguments. Note they will be reset to default values if they are
	less than 0.0. Modified all the drivers that call gridSmooth

2004-09-22 18:28 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c new driver to start looking at unit adaptation
	problems

2004-09-22 17:00 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetGlobalMap) added to apply a metric to
	every node in field.

2004-09-17 17:35 Bill Jones <w.t.jones@larc.nasa.gov>

	* Added support for CAPRI 2.0 interface.  Configure with