@@ -332,11 +332,23 @@ VALUE grid_findCell( VALUE self, VALUE rb_nodes )
   return INT2NUM( gridFindCell( grid, nodes ) );
 }
 
-VALUE grid_cellConnection( VALUE self, VALUE cell, VALUE index )
+VALUE grid_nconn( VALUE self )
 {
   GET_GRID_FROM_SELF;
-  return INT2NUM( gridCellConnection( grid, cell, index ) );
+  return INT2NUM( gridNConn(grid) );
 }
+
+VALUE grid_cell2Conn( VALUE self, VALUE cell, VALUE index )
+{
+  GET_GRID_FROM_SELF;
+  return INT2NUM( gridCell2Conn( grid, NUM2INT(cell), NUM2INT(index) ) );
+}
+
+VALUE grid_eraseConn( VALUE self )
+{
+  GET_GRID_FROM_SELF;
+  return (gridEraseConn(grid )==NULL?Qnil:self);
+}  
 
 VALUE grid_addFace( VALUE self, VALUE n0, VALUE n1, VALUE n2, VALUE faceId )
 {
@@ -1077,7 +1089,10 @@ void Init_Grid()
 		    grid_findOtherCellWith3Nodes, 4 );
   rb_define_method( cGrid, "findCellWithFace", grid_findCellWithFace, 1 );
   rb_define_method( cGrid, "findCell", grid_findCell, 1 );
-  rb_define_method( cGrid, "cellConnection", grid_cellConnection, 2 );
+
+  rb_define_method( cGrid, "nconn", grid_nconn, 0 );
+  rb_define_method( cGrid, "cell2Conn", grid_cell2Conn, 2 );
+  rb_define_method( cGrid, "eraseConn", grid_eraseConn, 0 );
 
   rb_define_method( cGrid, "addFace", grid_addFace, 4 );
   rb_define_method( cGrid, "addFaceUV", grid_addFaceUV, 10 );
